--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">AR Core Demo</string>
+
+    <string name="camera_permission_description">Camera permission is needed to run this application</string>
+    <string name="ar_button">ArButton</string>
+    <string name="google_privacy_policy">This application runs on <a href="https://play.google.com/store/apps/details?id=com.google.ar.core"><b>Google Play Services for AR</b></a> (ARCore), which is provided by Google LLC and governed by the <a href="https://policies.google.com/privacy"><b>Google Privacy Policy.</b></a></string>
+
 </resources>
